修复无法上传头像和无法保存生日bug

--- a/views/settings/profile.html
+++ b/views/settings/profile.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="birthday">生日{{user.birthday}}</label>
+        <label for="birthday">生日</label>
         <input type="date" class="form-control" name="birthday" id="birthday" placeholder="" value="{{user.birthday}}">
       </div>
       <button type="submit" class="btn btn-success">保存</button>
