--- a/views/test.html
+++ b/views/test.html
@@ -29,9 +29,9 @@
         // })
 
         function uploadFile() {
-            console.log('22222')
+            // console.log('22222')
             const file = $("#upload_file")[0].files[0]
-            console.log(file)
+            // console.log(file)
 
             var reader = new FileReader();
             reader.onloadend = function (e) {
