--- a/public/css/markdown-github.css
+++ b/public/css/markdown-github.css
@@ -1,8 +1,8 @@
 body {
-  // max-width: 980px;
+  /* // max-width: 980px;
   // border: 1px solid #ddd;
   // outline: 1300px solid #fff;
-  // margin: 16px auto;
+  // margin: 16px auto; */
 }
 
 body .markdown-body {
