--- a/views/settings/profile.html
+++ b/views/settings/profile.html
@@ -113,7 +113,7 @@
         processData: false,
         contentType: false,
         success: function (data) {
-          console.log(data)
+          // console.log(data)
 
           const err_code = data.err_code
           const message = data.message
